--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,17 @@ code {
 
 
 #wrapper {
-
+  padding: 50px;
+}
+#wrapper > *:not(:first-child) {
+  margin-top: 1rem;
+}
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -1rem;
+}
+.grid > * {
+  margin-top: 1rem !important;
+  margin-left: 1rem;
 }
